assets/main.css
/** General **/

html {
    margin-left: calc(100vw - 100%);
    margin-right: 0;
    scroll-behavior: smooth;
    box-sizing: border-box;
    background-color: rgb(248, 251, 255);
	background-size: 400% 400%;
	animation: gradient 60s ease infinite;
	height: 100vh;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, "Ubuntu", "Noto Sans", "Droid Sans", Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol' !important;
}

*,
*:before,
*:after {
    box-sizing: inherit;
}

body {
    height: 100%;
    max-width: 1000px;
    margin: 0 auto;
    overflow-x: hidden;
}

@media screen and (min-width: 715px) {
    body {
        display: grid;
        grid-template-columns: 70% 30%;
        gap: 20px;
    }
}

/* Header */

header {
    background-color: white;
    padding: 10px;
    border: 1px solid rgb(225, 225, 225);
    margin-top: 10px;
    display: none;
}

.h-card > div {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 7px;
}

.h-card h1 {
    margin-bottom: 2px;
}

address.properties {
    margin-bottom: 16px;
}

/* Sidebar */

.sidebar-section {
    padding: 10px;
    margin-top: 10px;
}

.sidebar-section:first-child {
    margin-top: 15px;
}

.sidebar-section h3 {
    margin-top: 0;
}

.sidebar-section p:last-child {
    margin-bottom: 0;
}

.sidebar-section.about {
    padding: 20px;
}

/* Menu */

nav ul {
    list-style: none;
    padding-left: 18px;
}

nav ul li a {
    font-weight: 600;
    font-size: 26px;
    color: black;
    margin-bottom: 10px;
    font-weight: 400;
}

nav ul li a::before {
    font-family: "Font Awesome 5 Free";
    font-weight: 900;
    display: inline-block;
    font-style: normal;
    font-variant: normal;
    text-rendering: auto;
    -webkit-font-smoothing: antialiased;
    margin-right: 20px;
    width: 20px;
}

nav ul li a.home::before {
    content: "\e1b0";
}

nav ul li a.replies::before {
    content: "\f3e5";
}

nav ul li a.notes::before {
    content: "\f036";
}

nav ul li a.likes::before {
    content: "\f004";
}

nav ul li a.reposts::before {
    content: "\e4bb";
}

nav ul li a.bookmarks::before {
    content: "\f02e";
}

nav ul li a.photos::before {
    content: "\f030";
}

/* Link styles */

a {
    color: rgb(29, 155, 240);
    text-decoration: none;
}
a:hover:not(.no-underline), a:focus:not(.no-underline) {
    text-decoration: underline;
}
a:active {
    color: black;
}

/* Posts & comments */
.h-entry, .comment {
    padding: 11px;
    border: 1px solid rgb(225, 225, 225);
    background-color: white;
    display: flex;
    flex-direction: column;
    gap: 7px;
    margin-top: 15px;
    border-radius: 11px;
}

.h-entry > div:last-child {
    flex-grow: 1;
}

.h-entry p, .comment p {
    font-size: 18px;
    margin-top: 0;
}

.e-content {
    flex-grow: 1;
}

.u-photo, .comment-photo {
    border-radius: 50%;
    aspect-ratio: 1/1;
    object-fit: cover;
}

.e-content .u-photo {
    border-radius: 0;
}

.u-photo {
    width: 60px;
}
.comment-photo {
    width: 30px;
}

/* Small text underneath post */
.sub {
    display: flex;
    justify-content: space-between;
    align-items: flex-end;
}
time, .sub * {
    font-size: 12px;
    color: rgb(84, 87, 94);
    display: inline;
    margin: 0;
}

/* Supertext (liked, repost, reply etc.) */
.h-entry p.title, .comment p.title {
    font-size: 16px;
    color: rgb(84, 87, 94); 
    margin-bottom: 3px;
}

/* Spacing between .sub and content */
.h-entry > div, .comment > div {
    display: flex;
    flex-direction: column;
}

.h-entry > div:first-child, .comment > div:first-child {
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
    gap: 10px;
}

.h-entry > div:first-child p, .comment > div:first-child p {
    display: block;
    margin: 0;
    font-size: 20px;
}

.h-entry > div:first-child p a, .comment > div:first-child p a {
    color: black;
    font-weight: 600;
}

/* Comment section */

.comments {
    padding: 0;
    margin: 0;
}

.comment {
    list-style: none;
}

.comment-section {
    margin-top: 90px;
}

.comment-section form a, footer a {
    font-weight: bold;
}

/* Forms */

input, button {
    padding: 6px;
    font-size: 16px;
    outline-offset: 1px;
}

input:active, input:not([type="submit"]):not([type="button"]):focus, button:active {
    outline: 2px solid #b4d2ff;
}

input, button {
    color: black;
    border-radius: 0;
    border: 1px solid rgb(225, 225, 225);
}

button, input[type="submit"], input[type="button"] {
    cursor: pointer;
}

/* Images */

.h-entry .e-content img {
    max-width: 300px;
    width: 100%;
}

/* Render sharp pixelart */
.pixelart {
    image-rendering: -moz-crisp-edges;
    image-rendering: crisp-edges;
    image-rendering: pixelated;
}

/* Misc & utilities */

.warning, .error, .msg {
    padding: 7px;
    border-radius: 6px;
    margin-top: 10px;
}

.warning {
    border: 1px solid rgb(184, 116, 0);
    background-color: rgb(255, 210, 132);
    color: rgb(73, 51, 12);
}

.error {
    border: 1px solid rgb(184, 18, 0);
    background-color: rgb(255, 148, 132);
    color: rgb(73, 12, 12);
}

.error a {
    color: rgb(230, 52, 52);
}

.get-your-own {
    font-size: 22px;
    text-underline-offset: 7px;
    text-decoration: none;
    font-weight: 600;
}

.get-your-own:hover {
    font-weight: 800;
}

@keyframes gradient {
	0% {
		background-position: 0% 50%;
	}
	33% {
		background-position: 100% 50%;
	}
	66% {
		background-position: 50% 100%;
	}
    100% {
        background-position: 0% 50%;
    }
}

